# NetTool-rp2350b

./: .gitignore  DEPENDS.txt  README.md  build.bat
applications/: SConscript  main.c
applications/lvgl/: SConscript  lv_conf.h  lv_font_hzk.c  lv_font_hzk.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
applications/lvgl/demo/: SConscript
applications/lvgl/net_tester/: SConscript  net_tester_crimp.h  net_tester_ip_input.h  net_tester_pair.c  net_tester_trace.c
board/: Kconfig  SConscript  board.h
board/ports/: SConscript  arp_cmd.c  boost_pwr.c  ch390_port.c  link_blink_cmd.c  net_tools_cmd.c  ssdp_listen.c
board/ports/battery/: battery_adc.h  power_status.c
board/ports/charger/: charge_status.c  charger_detect.h
board/ports/ec11/: SConscript
board/ports/hc238/: ctrl_h_hc238.c  ctrl_l_hc238.h
board/ports/hzk/: SConscript  hzk.h  hzk_core.c  hzk_uni2gb.inc
board/ports/lcd/: SConscript  lcd_selftest.c
board/ports/mux4051/: link_adc.c  mux4051_port.c  tmux4051.h
board/ports/pwm/: sc_link_pwm.c
cmake/: arm-gcc-toolchain.cmake  hzk_embed.cmake
rt-thread-patches/bsp/raspberry-pico/libraries/Drivers/: drv_spi.c
rt-thread-patches/components/drivers/spi/: Kconfig  SConscript  ch390.c
rt-thread/bsp/raspberry-pico/RP2350/: .config  CMakeLists.txt  custom.cmake  link.ld  rtconfig.h  rtconfig.py
rt-thread/bsp/raspberry-pico/RP2350/applications/lvgl/demo/: lv_demo.c
rt-thread/bsp/raspberry-pico/RP2350/applications/lvgl/net_tester/: hzk12_font.h  net_tester_ascii_input.c  net_tester_ascii_input.h  net_tester_crimp.c  net_tester_ip_input.c  net_tester_pair.h  net_tester_trace.h  net_tester_ui.c  net_tester_ui.h
rt-thread/bsp/raspberry-pico/RP2350/board/: board.c
rt-thread/bsp/raspberry-pico/RP2350/board/pico_cfg_override/pico/: config_autogen.h
rt-thread/bsp/raspberry-pico/RP2350/board/ports/: boost_pwr.h  ch390_net_cmd.c  eth_info_cmd.c  power_hold.c  power_hold.h
rt-thread/bsp/raspberry-pico/RP2350/board/ports/battery/: battery_adc.c  power_status.h
rt-thread/bsp/raspberry-pico/RP2350/board/ports/charger/: charge_status.h  charger_detect.c  charger_port.c
rt-thread/bsp/raspberry-pico/RP2350/board/ports/ec11/: ec11.c  ec11.h
rt-thread/bsp/raspberry-pico/RP2350/board/ports/hc238/: ctrl_h_hc238.h  ctrl_l_hc238.c  hc238.c  hc238.h  hc238_port.c  pair_scan.h
rt-thread/bsp/raspberry-pico/RP2350/board/ports/hzk/: hzk_port.c  hzk_uni2gb.c
rt-thread/bsp/raspberry-pico/RP2350/board/ports/lcd/: drv_lcd.c  drv_lcd.h
rt-thread/bsp/raspberry-pico/RP2350/board/ports/mux4051/: link_adc.h  link_mux4051.c  link_mux4051.h  rx_mux4051.c  rx_mux4051.h  tmux4051.c  tx_mux4051.c  tx_mux4051.h
rt-thread/bsp/raspberry-pico/RP2350/board/ports/pwm/: sc_link_pwm.h
rt-thread/bsp/raspberry-pico/libraries/Drivers/: drv_gpio.c  drv_uart.c
rt-thread/components/drivers/spi/: ch390.h
